# interview-preparation-tool-with-open-ai

./: README.md  main.py  pyproject.toml  requirements.txt
